--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,9 +84,9 @@
             </div>
 
             <div class="d-flex justify-content-between mt-4">
-                <a href="/hero/<%= currentId - 1 %>" class="btn btn-primary">Previous</a>
+                <a href="/hero/<%= currentId %>?direction=prev" class="btn btn-primary">Previous</a>
                 <span class="align-self-center">Hero <%= currentId %> of <%= totalHeroes %></span>
-                <a href="/hero/<%= currentId + 1 %>" class="btn btn-primary">Next</a>
+                <a href="/hero/<%= currentId %>?direction=next" class="btn btn-primary">Next</a>
             </div>
         <% } %>
     </div>
